# prima_tracing.rs

./: .drone.yml  .gitignore  .mise.toml  .versions.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  backstage-catalog.yaml  backstage-config.yaml  catalog-info.yaml  deny.toml  docker-compose.yml  entrypoint  rust-toolchain.toml
.github/: ci.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml  yank.yml
deploy/: build
examples/: custom.rs  custom_formatter.rs  custom_json_subscriber.rs  custom_subscriber.rs  datadog_json_logger.rs  ping.rs  pong.rs  simple.rs
src/: config.rs  formatter.rs  lib.rs  macros.rs  storage.rs  subscriber.rs  telemetry.rs
src/async_graphql/: mod.rs
src/config/: country.rs  environment.rs  mod.rs
src/graphql/: mod.rs
src/json/: formatter.rs  mod.rs  storage.rs
src/layer/: error.rs  kube_env.rs  mod.rs  version.rs
src/macros/: error_report.rs  mod.rs
src/resources/: kube.rs  mod.rs
tests/: async_graphql.rs  error_report.rs  macros.rs  main.rs
tests/e2e/: mod.rs
