[package]
name = "prima-tracing"
version = "0.5.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Enrico Risa <enrico.risa@prima.it>"]
edition = "2021"
description = "Prima.it opentelemetry standard library"
repository = "https://github.com/primait/prima_tracing.rs"

[features]
default = ["tracing"]
# Legacy feature names kept for compatibility reasons
prima-logger-datadog = ["datadog"]
prima-logger-json = ["json-logger"]
prima-telemetry = ["tracing"]

json-logger = []
datadog = ["json-logger", "opentelemetry", "tracing-opentelemetry"]
tracing = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]

# feature sets most likely used in given environment
live = [ "json-logger", "datadog", "tracing" ]
dev = [ "tracing" ]

rt-tokio-current-thread = ["opentelemetry/rt-tokio-current-thread"]

[[example]]
name = "custom-json-subscriber"
path = "examples/custom_json_subscriber.rs"
required-features = ["json-logger"]

[[example]]
name = "custom-subscriber"
path = "examples/custom_subscriber.rs"
required-features = ["json-logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"], default-features = false, optional = true }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = { version = "0.1" }

# serialization/deserialization
serde = { version = "^1.0", features = ["derive"] }
# json serialization
serde_json = "^1.0"

# dates
chrono = { version = "^0.4", default-features = false, features = ["serde", "clock"] }

[dev-dependencies]
actix-web = "4.0.1"
tracing-actix-web = { version = "0.7.0", features = ["opentelemetry_0_17"] }
prima_bridge = "0.13"
tokio = { version = "1.17", features = ["rt", "macros", "rt-multi-thread"] }
