[package]
authors = ["Enrico Risa <enrico.risa@prima.it>"]
description = "Prima.it opentelemetry standard library"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "prima-tracing"
readme = "README.md"
repository = "https://github.com/primait/prima_tracing.rs"
version = "0.13.1"

[features]
default = []
# Legacy feature names kept for compatibility reasons
prima-logger-datadog = ["datadog"]
prima-logger-json = ["json-logger"]
prima-telemetry = ["traces"]

datadog = ["json-logger", "opentelemetry", "tracing-opentelemetry"]
json-logger = []
traces = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

# feature sets most likely used in given environment
dev = ["traces"]
live = ["json-logger", "datadog", "traces"]

rt-tokio-current-thread = ["opentelemetry_sdk/rt-tokio-current-thread"]

[[example]]
name = "custom-json-subscriber"
path = "examples/custom_json_subscriber.rs"
required-features = ["json-logger"]

[[example]]
name = "custom-subscriber"
path = "examples/custom_subscriber.rs"
required-features = ["json-logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
opentelemetry = {version = "0.26", optional = true}
opentelemetry-otlp = {version = "0.26", features = ["http-proto", "reqwest-client"], default-features = false, optional = true}
opentelemetry_sdk = {version = "0.26", features = ["rt-tokio"], optional = true}
tracing = {version = "0.1", features = ["max_level_debug", "release_max_level_info"]}
tracing-log = {version = "0.2"}
tracing-opentelemetry = {version = "0.27", optional = true}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# serialization/deserialization
serde = {version = "^1.0", features = ["derive"]}
# json serialization
serde_json = "^1.0"

# dates
chrono = {version = "^0.4", default-features = false, features = ["serde", "clock"]}
url = "2.5.0"
once_cell = "1.19.0"

[dev-dependencies]
actix-web = "4.0.1"
opentelemetry-jaeger = {version = "0.22", features = ["integration_test"]}
prima_bridge = "0.17"
tokio = {version = "1.17", features = ["rt", "macros", "rt-multi-thread"]}
tracing-actix-web = {version = "0.7.11", features = ["opentelemetry_0_23"]}
uuid = {version = "1.10", features = ["v4"]}
